--- a/Multiples/Base.lproj/Main.storyboard
+++ b/Multiples/Base.lproj/Main.storyboard
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Multiples" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +18,88 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="chalkboard" translatesAutoresizingMaskIntoConstraints="NO" id="JXE-6h-RM4">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4gl-Ua-zfK" userLabel="PlayBtn">
+                                <rect key="frame" x="220" y="389" width="160" height="155"/>
+                                <rect key="contentStretch" x="0.0" y="0.0" width="0.0" height="0.0"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="4gl-Ua-zfK" secondAttribute="height" multiplier="32:31" id="Xt9-VG-TjG"/>
+                                    <constraint firstAttribute="width" constant="160" id="caw-Gk-632"/>
+                                    <constraint firstAttribute="height" constant="155" id="mGP-td-BtH"/>
+                                </constraints>
+                                <state key="normal" image="play"/>
+                                <connections>
+                                    <action selector="onPlayPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ezw-7v-iUh"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="What multiple to add by?" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="EO6-jV-hIo">
+                                <rect key="frame" x="167" y="327" width="267" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="vjs-LD-Jkp"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="18"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="MULTIPLES" translatesAutoresizingMaskIntoConstraints="NO" id="V6k-tj-6s1">
+                                <rect key="frame" x="157" y="46" width="286" height="141"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="V6k-tj-6s1" secondAttribute="height" multiplier="286:141" id="EHN-Gq-QMn"/>
+                                </constraints>
+                            </imageView>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Press Add to add!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pho-Rj-sRV">
+                                <rect key="frame" x="145" y="153" width="311" height="90"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="34"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9j6-e5-J0b" userLabel="AddBtn">
+                                <rect key="frame" x="167" y="319" width="265" height="101"/>
+                                <state key="normal" image="add"/>
+                                <connections>
+                                    <action selector="onAddPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Hu0-Xw-Bp6"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="JXE-6h-RM4" secondAttribute="bottom" id="6AZ-XD-Xgv"/>
+                            <constraint firstItem="V6k-tj-6s1" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="6eU-3j-8R2"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="9j6-e5-J0b" secondAttribute="bottom" constant="180" id="7to-kQ-Dpz"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="V6k-tj-6s1" secondAttribute="trailing" constant="50" id="EWB-pr-vY5"/>
+                            <constraint firstAttribute="trailing" secondItem="JXE-6h-RM4" secondAttribute="trailing" id="FXS-Wy-G2x"/>
+                            <constraint firstItem="9j6-e5-J0b" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="IK5-5Y-9fD"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="4gl-Ua-zfK" secondAttribute="bottom" constant="56" id="Jrv-g9-GaU"/>
+                            <constraint firstItem="pho-Rj-sRV" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="TBD-Hk-4KO"/>
+                            <constraint firstItem="4gl-Ua-zfK" firstAttribute="top" secondItem="EO6-jV-hIo" secondAttribute="bottom" constant="32" id="Zov-SI-SLf"/>
+                            <constraint firstItem="4gl-Ua-zfK" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ekQ-mI-fpm"/>
+                            <constraint firstItem="9j6-e5-J0b" firstAttribute="top" secondItem="pho-Rj-sRV" secondAttribute="bottom" constant="76" id="jlx-r0-380"/>
+                            <constraint firstItem="JXE-6h-RM4" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="mTh-hG-szS"/>
+                            <constraint firstItem="V6k-tj-6s1" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="25" id="nm8-xA-98A"/>
+                            <constraint firstItem="EO6-jV-hIo" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="rFv-Ox-7h6"/>
+                            <constraint firstItem="V6k-tj-6s1" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="50" id="uVN-uR-0Sm"/>
+                            <constraint firstItem="JXE-6h-RM4" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="y8U-GP-22B"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="addButton" destination="9j6-e5-J0b" id="g1e-0x-BJf"/>
+                        <outlet property="logoImage" destination="V6k-tj-6s1" id="P8E-Mg-zN9"/>
+                        <outlet property="mathLabel" destination="pho-Rj-sRV" id="d42-qr-DXu"/>
+                        <outlet property="playButton" destination="4gl-Ua-zfK" id="rdN-aF-SFn"/>
+                        <outlet property="userEntry" destination="EO6-jV-hIo" id="jmH-Yf-12F"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="19" y="143"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="MULTIPLES" width="533" height="124"/>
+        <image name="add" width="211" height="101"/>
+        <image name="chalkboard" width="801" height="750"/>
+        <image name="play" width="272" height="268"/>
+    </resources>
 </document>
